# bioacoustics

./: .Rbuildignore  .gitignore  .travis.yml  CRAN-SUBMISSION  DESCRIPTION  NAMESPACE  NEWS.md  README.md  cleanup  configure  configure.ac  cran-comments.md
.github/workflows/: check-release.yml  check-standard.yml
R/: BatBioacoustics.R  BatClassify.R  RcppExports.R  bioacoustics.R  metadata.R  metadata_GUANO.R  metadata_zc.R  myotis-data.R  plot_zc.R  print.R  read_audio.R  read_zc.R  resample.R  spectro.R  tools.R  write_zc.R  zc-data.R
autom4te.cache/: output.1
data/: myotis.rda  zc.rda
inst/extdata/: recording_20170716_230503.wac
man/: bioacoustics-package.Rd  blob_detection.Rd  dot-parse.timestamp.Rd  file_checks.Rd  file_type_guess.Rd  fspec.Rd  guano_md.Rd  metadata.Rd  metadata_zc.Rd  mp3_to_wav.Rd  myotis.Rd  plot.zc.Rd  plot_zc.Rd  read_audio.Rd  read_mp3.Rd  read_wac.Rd  read_wav.Rd  read_zc.Rd  resample.Rd  rotate90.Rd  spectro.Rd  threshold_detection.Rd  to_dB.Rd  write_zc.Rd
src/: Makevars.in  Makevars.ucrt  Makevars.win  RcppExports.cpp  bat_bioacoustics.cpp  bat_classify.cpp  bb_analyse.cpp  bb_analyse.h  bb_audio_event.h  bb_detect.cpp  bb_detect.h  bb_extract.cpp  bb_extract.h  bb_kalman.h  bb_tools.h  bc_blob_finder.cpp  bc_blob_finder.h  bc_features.cpp  bc_features.h  bc_img_processing.cpp  bc_img_processing.h  bc_tools.h  fft.cpp  fft.h  linear_model.h  read_wac.cpp  read_wac.h  resample.cpp  spectro.cpp  spectro.h  tools.h
tools/: winlibs.R
vignettes/: bioacoustics.Rmd  bioacoustics.html  introduction.Rmd  tutorial.Rmd
